apicurio-registry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apicurio-registry
  namespace: krk-application-namespace
  labels:
    app: apicurio-registry
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: apicurio-registry
  template:
    metadata:
      labels:
        app: apicurio-registry
    spec:
      containers:
        - name: apicurio-registry
          image: harbor.massiltech.com/krakendproject/apicurio-registry:3.0.5
          imagePullPolicy: Always
          ports:
            - containerPort: 8889
      volumes:
        - name: apicurio-data
          persistentVolumeClaim:
            claimName: apicurio-pvc
