apicurio-registry-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apicurio-registry-ui
  namespace: krk-application-namespace
  labels:
    app: apicurio-registry-ui
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: apicurio-registry-ui
  template:
    metadata:
      labels:
        app: apicurio-registry-ui
    spec:
      containers:
        - name: apicurio-registry-ui
          image: harbor.massiltech.com/krakendproject/apicurio-registry-ui:3.0.5
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
