dev-portal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-portal-deployment
  namespace: krk-application-namespace
  labels:
    app: dev-portal
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: dev-portal
  template:
    metadata:
      labels:
        app: dev-portal
    spec:
      containers:
      - name: dev-portal
        image: harbor.massiltech.com/krakendproject/yogesh0897/dev-portal-v6:2025.02.07
        imagePullPolicy: Always
        ports:
        - containerPort: 80
