keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: krk-application-namespace
  labels:
    app: keycloak
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: harbor.massiltech.com/krakendproject/keycloak:26.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        command: ["/opt/keycloak/bin/kc.sh"]
        args: ["start-dev"]
