keycloak-new-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-new
  namespace: krk-application-namespace
  labels:
    app: keycloak-new
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: keycloak-new
  template:
    metadata:
      labels:
        app: keycloak-new
    spec:
      containers:
      - name: keycloak-new
        image: harbor.massiltech.com/krakendproject/keycloak:26.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        command: ["/opt/keycloak/bin/kc.sh"]
        args: ["start-dev"]
        volumeMounts:
        - name: keycloak-data
          mountPath: /opt/keycloak/data
        - name: template-ftl
          mountPath: /opt/keycloak/themes/custom/login/template.ftl
          subPath: template.ftl
        - name: theme-file
          mountPath: /opt/keycloak/themes/custom/login/theme.properties
          subPath: theme.properties
      volumes:
      - name: keycloak-data
        persistentVolumeClaim:
          claimName: keycloak-pvc
      - name: template-ftl
        configMap:
          name: massil-template
      - name: theme-file
        configMap:
          name: theme-properties-config
