massilgateway-dep-file.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: massilgateway-dep-file
  namespace: krk-application-namespace
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: massilgateway
  template:
    metadata:
      labels:
        app: massilgateway
    spec:
      containers:
        - name: massilgateway
          image: harbor.massiltech.com/krakendproject/rupesh2811/massilgateway4.0:3.0
          ports:
            - containerPort: 8082
