publisher-portal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: publisher-portal-deployment
  namespace: krk-application-namespace
  labels:
    app: publisher-portal
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: publisher-portal
  template:
    metadata:
      labels:
        app: publisher-portal
    spec:
      containers:
        - name: publisher-portal
          image: harbor.massiltech.com/krakendproject/hemanth1375/publisherportal:5.2
          imagePullPolicy: Always
          ports:
            - containerPort: 80
