apicurio-registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apicurio-registry
  namespace: krk-application-namespace
  labels:
    app: apicurio-registry
spec:
  selector:
    app: apicurio-registry
  ports:
    - protocol: TCP
      port: 81
      targetPort: 8889
      nodePort: 31845
  type: NodePort
