apicurio-registry-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apicurio-registry-ui-service
  namespace: krk-application-namespace
  labels:
    app: apicurio-registry-ui
spec:
  selector:
    app: apicurio-registry-ui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 8888
  type: NodePort
