keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: krk-application-namespace
  labels:
    app: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
