massil-playground-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: massil-playground-service
  namespace: krk-application-namespace
  labels:
    app: massil-playground
spec:
  selector:
    app: massil-playground
  ports:
    - protocol: TCP
      port: 8089
      targetPort: 8089
      nodePort: 31021
  type: NodePort
