massil-playground-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: massil-playground-ui-service
  namespace: krk-application-namespace
  labels:
    app: massil-playground-ui
spec:
  selector:
    app: massil-playground-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31022
  type: NodePort
