publisher-portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: publisher-portal-service
  namespace: krk-application-namespace
  labels:
    app: publisher-portal
spec:
  selector:
    app: publisher-portal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
