service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apicurio-registry-service
  namespace: krk-application-namespace
  labels:
    app: apicurio-registry
spec:
  selector:
    app: apicurio-registry
  ports:
    - protocol: TCP
      port: 81
      targetPort: 8080
  type: ClusterIP
