keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: krk-application-namespace
spec:
  rules:
  - host: "keycloak.local.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port:
              number: 80
